# MarsGIS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  AUDIT_REPORT.md  DATASETS_SUMMARY.md  DEMO.md  Dockerfile  INSTALL_POETRY.md  NAVIGATION_OPTIMIZATION.md  OPTIMIZATION_QUICKREF.md  OPTIMIZATION_SUMMARY.md  POETRY_QUICK_START.md  PRD2.md  QUICK_START.md  QUICK_START_WEB.md  README.md  START_LOCAL.md  TESTING.md  TEST_RESULTS.md  WEBUI.md  code-examples.md  docker-compose.yml  environment.yml  mars-site-architecture.md  marshab_config.yaml  phase0-bootstrap.md  phase1-core-infrastructure.md  phases2-6-detailed.md  pyproject.toml  render.yaml  requirements.txt  ruff_remaining.txt  ruff_remaining_after_fixes.txt  start_all_servers.ps1  start_app.ps1  start_web_server.ps1
.cursor/plans/: 2d-to-3d_roi_bridge_a7739a2d.plan.md
.github/workflows/: ci.yml
docs/: DATASETS_SUMMARY.md  DATA_SOURCES.md  MarsGIS_Enhancement_Research.md  ROUTE_PLANNING.md  mission_walkthrough.md  phase1-architecture.md  phase2-architecture.md  phase3-architecture.md  portfolio_scope.md  release_checklist.md  testing-verification.md  week3_week4_closeout.md
marshab/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  types.py
marshab/_future/: README.md  __init__.py  fusion_routes.py  multi_resolution_fusion.py  visibility.py
marshab/analysis/: __init__.py  decision_brief.py  export.py  route_cost.py  routing.py  site_scoring.py  solar_potential.py  visibility.py
marshab/config/: __init__.py  criteria_config.py  (+4 more)
scripts/: prepare_demo_data.ps1  run_portfolio_demo.py  run_smoke_demo.ps1  run_smoke_demo.sh  setup_real_dem.py  smoke_tile_3d_readiness.py  start_docker.ps1  start_local.ps1  start_local.sh  start_render_api.sh  start_web.ps1  start_web.sh  verify_installation.sh
tests/: __init__.py  conftest.py  test_pipeline_smoke.py  test_route_smoke.py
webui/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
(+208 files in other folders)
